--- a/src/web/index.html
+++ b/src/web/index.html
@@ -83,8 +83,10 @@ function getCameraInfo( )
 
                 $('#cameracontainer').width( cameraWidth + 20 );
                 $('#cameraproperties').css( { 'margin-left' : cameraWidth + 40 } );
+                var d = document.getElementById('#title');
+                d.innerhtml( title.replace( "<", "&lt;" ).replace( ">", "&gt;" ) );
 
-                $('#title').html( title.replace( "<", "&lt;" ).replace( ">", "&gt;" ) );
+            //$('#title').html( title.replace( "<", "&lt;" ).replace( ">", "&gt;" ) );
                 document.title = 'web2cam :: ' + title;
             }
         },
@@ -106,7 +108,9 @@ function getVersionInfo( )
         {
             if ( ( data.status == "OK" ) && ( data.config.version ) )
             {
-                $('#version').html( " :: " + data.config.version );
+                var d2 = document.getElementById('#version');
+                d2.innerhtml( " :: " + data.config.version );
+                //$('#version').html( " :: " + data.config.version );
             }
         }
     } );
@@ -126,7 +130,9 @@ function showSettings( )
 
             success: function(data)
             {
-                $( "#cameraproperties" ).html( data ).trigger( 'create' );
+                var d3 = document.getElementById("#cameraproperties");
+                d3.innerhtml( data ).trigger( 'create' );
+                //$( "#cameraproperties" ).html( data ).trigger( 'create' );
                 $( "#cameraproperties" ).show( );
 
                 $( "#settingsButton" ).addClass( 'ui-btn-active' );
